defconfig: Enable fs-verity
Signed-off-by: officialputuid <officialputuid@hack.id>

--- a/arch/arm64/configs/RM6785_defconfig
+++ b/arch/arm64/configs/RM6785_defconfig
@@ -461,6 +461,7 @@ CONFIG_F2FS_FS_SECURITY=y
 CONFIG_NTFS_FS=y
 CONFIG_NTFS_RW=y
 CONFIG_FS_ENCRYPTION_INLINE_CRYPT=y
+CONFIG_FS_VERITY=y
 CONFIG_QUOTA_NETLINK_INTERFACE=y
 CONFIG_ISO9660_FS=y
 CONFIG_JOLIET=y
