--- a/.github/workflows/normal.yml
+++ b/.github/workflows/normal.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: psionic-Build
+name: build-normal
 
 on:
   workflow_dispatch:
@@ -17,18 +17,25 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - run: |
-          git clone --depth=1 https://github.com/psionicprjkt/android_kernel_realme_mt6785 mt6785
+          git clone https://github.com/psionicprjkt/android_kernel_realme_mt6785 mt6785
           git clone --depth=1 https://gitlab.com/Panchajanya1999/azure-clang.git mt6785/clang
 
-    - name: Latest KernelSU
+    - name: Revert KernelSU
       run: |
           cd mt6785
-          rm -rf KernelSU && curl -LSs "https://raw.githubusercontent.com/tiann/KernelSU/main/kernel/setup.sh" | bash -
+          git config --global user.name "officialputuid"
+          git config --global user.email officialputuid@hack.id
+          git fetch https://github.com/psionicprjkt/android_kernel_realme_mt6785 R-based-nonksu
+          git cherry-pick fc79959
 
     - name: Build Kernel
       run: |
           cd mt6785
-          . build.sh
+          . build-normal.sh
+
+    - name: Set Date
+      run: |
+          echo "RELEASE_DATE=$(date +"%d%m%Y")" >> "$GITHUB_ENV"
 
     - name: Release Kernel
       uses: marvinpinto/action-automatic-releases@latest
@@ -36,6 +43,6 @@ jobs:
         repo_token: ${{ secrets.GITHUB_TOKEN }}
         automatic_release_tag: "latest"
         prerelease: false
-        title: psionicKSU-RM6785
+        title: psionicKSU-RM6785-${{ env.RELEASE_DATE }}-Normal
         files: |
           mt6785/AnyKernel/psionicKSU-RM6785*
