wf: Trigger ksu wf after normal version started
Signed-off-by: officialputuid <officialputuid@hack.id>

--- a/.github/workflows/normal.yml
+++ b/.github/workflows/normal.yml
@@ -33,6 +33,11 @@ jobs:
           cd mt6785
           . build-normal.sh
 
+    - name: Trigger ksu wf
+      env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      run: gh workflow run ksu.yml --ref R-based
+
     - name: Set Date
       run: |
           echo "RELEASE_DATE=$(date +"%d%m%Y")" >> "$GITHUB_ENV"
