--- a/.github/workflows/normal.yml
+++ b/.github/workflows/normal.yml
@@ -25,6 +25,11 @@ jobs:
           git clone https://github.com/psionicprjkt/android_kernel_realme_mt6785 mt6785
           git clone --depth=1 https://gitlab.com/Panchajanya1999/azure-clang.git mt6785/clang
 
+    - name: Trigger ksu wf
+      env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      run: gh workflow run ksu.yml --ref R-based
+
     - name: Revert KernelSU
       run: |
           cd mt6785
@@ -36,11 +41,6 @@ jobs:
           cd mt6785
           . build-normal.sh
 
-    - name: Trigger ksu wf
-      env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      run: gh workflow run ksu.yml --ref R-based
-
     - name: Set Date
       run: |
           echo "RELEASE_DATE=$(date +"%d%m%Y")" >> "$GITHUB_ENV"
@@ -51,6 +51,6 @@ jobs:
         repo_token: ${{ secrets.GITHUB_TOKEN }}
         automatic_release_tag: "latest"
         prerelease: false
-        title: psionicKSU-RM6785-${{ env.RELEASE_DATE }}-Normal
+        title: psionic-kernel-RM6785-${{ env.RELEASE_DATE }}-Normal
         files: |
-          mt6785/AnyKernel/psionicKSU-RM6785*
+          mt6785/AnyKernel/psionic-kernel-RM6785*
