defconfig: Enable CONFIG_MTK_SWPM
Signed-off-by: officialputuid <officialputuid@hack.id>

--- a/arch/arm64/configs/RM6785_defconfig
+++ b/arch/arm64/configs/RM6785_defconfig
@@ -1498,7 +1498,7 @@ CONFIG_MTK_UNIFY_POWER=y
 # CONFIG_MTK_SLBC is not set
 # CONFIG_MTK_SLBC_MMSRAM is not set
 CONFIG_MTK_CM_MGR=y
-# CONFIG_MTK_SWPM is not set
+CONFIG_MTK_SWPM=y
 CONFIG_MTK_QOS_FRAMEWORK=y
 # CONFIG_MTK_QOS_V1 is not set
 CONFIG_MTK_QOS_V2=y
