--- a/arch/arm64/configs/RM6785_defconfig
+++ b/arch/arm64/configs/RM6785_defconfig
@@ -1604,11 +1604,11 @@ CONFIG_MTK_HWMON=y
 # CONFIG_CUSTOM_KERNEL_ACTIVITY_SENSOR is not set
 # CONFIG_MTK_ACTIVITYHUB is not set
 CONFIG_CUSTOM_KERNEL_SENSOR_FUSION=y
-# CONFIG_CUSTOM_KERNEL_GRV_SENSOR is not set
-# CONFIG_CUSTOM_KERNEL_GMRV_SENSOR is not set
-# CONFIG_CUSTOM_KERNEL_RV_SENSOR is not set
-# CONFIG_CUSTOM_KERNEL_LINEARACCEL_SENSOR is not set
-# CONFIG_CUSTOM_KERNEL_GRAVITY_SENSOR is not set
+CONFIG_CUSTOM_KERNEL_GRV_SENSOR=y
+CONFIG_CUSTOM_KERNEL_GMRV_SENSOR=y
+CONFIG_CUSTOM_KERNEL_RV_SENSOR=y
+CONFIG_CUSTOM_KERNEL_LINEARACCEL_SENSOR=y
+CONFIG_CUSTOM_KERNEL_GRAVITY_SENSOR=y
 # CONFIG_CUSTOM_KERNEL_ORIENTATION is not set
 CONFIG_CUSTOM_KERNEL_UNCALI_ACC_SENSOR=y
 CONFIG_CUSTOM_KERNEL_UNCALI_GYRO_SENSOR=y
