--- a/arch/arm64/configs/RM6785_defconfig
+++ b/arch/arm64/configs/RM6785_defconfig
@@ -1699,7 +1699,7 @@ CONFIG_MTK_GPS_SUPPORT=y
 # CONFIG_MTK_GPS_EMI is not set
 CONFIG_MTK_FMRADIO=y
 CONFIG_MTK_FM_CHIP="MT6631_FM"
-# CONFIG_MTK_FM_50KHZ_SUPPORT is not set
+CONFIG_MTK_FM_50KHZ_SUPPORT=y
 # CONFIG_MTK_MERGE_INTERFACE_SUPPORT is not set
 # CONFIG_MTK_CONN_MT3337_CHIP_SUPPORT is not set
 CONFIG_MTK_CONNSYS_DEDICATED_LOG_PATH=y
