--- a/arch/arm64/configs/RM6785_defconfig
+++ b/arch/arm64/configs/RM6785_defconfig
@@ -1786,7 +1786,7 @@ CONFIG_MTK_GIC_EXT=y
 CONFIG_MTK_GIC_V3_EXT=y
 CONFIG_MTK_SYS_CIRQ=y
 CONFIG_FAST_CIRQ_CLONE_FLUSH=y
-# CONFIG_MTK_AUXADC is not set
+CONFIG_MTK_AUXADC=y
 CONFIG_MTK_M4U=y
 # CONFIG_MTK_ICE_DEBUG is not set
 CONFIG_MTK_ATF_LOGGER=y
