--- a/arch/arm64/configs/RM6785_defconfig
+++ b/arch/arm64/configs/RM6785_defconfig
@@ -1970,7 +1970,7 @@ CONFIG_MTK_AMMS=y
 # Misc configs
 #
 CONFIG_MTPROF=y
-# CONFIG_MTK_SCHED_MONITOR is not set
+CONFIG_MTK_SCHED_MONITOR=y
 # CONFIG_MTK_WQ_DEBUG is not set
 CONFIG_ANDROID_DEFAULT_SETTING=y
 CONFIG_MTK_ANDROID_DEFAULT_SETTING=y
