--- a/arch/arm64/configs/RM6785_defconfig
+++ b/arch/arm64/configs/RM6785_defconfig
@@ -2031,7 +2031,7 @@ CONFIG_DEVAPC_ARCH_V1=y
 CONFIG_DEVAPC_MT6785=y
 CONFIG_MTK_VOW_SUPPORT=y
 # CONFIG_MTK_VOW_DUAL_MIC_SUPPORT is not set
-# CONFIG_MTK_VOW_2E2K_SUPPORT is not set
+CONFIG_MTK_VOW_2E2K_SUPPORT=y
 CONFIG_MTK_VOW_AMAZON_SUPPORT=y
 CONFIG_MTK_VOW_GVA_SUPPORT=y
 CONFIG_MTK_VOW_MAX_PDK_NUMBER=0
