--- a/arch/arm64/configs/RM6785_defconfig
+++ b/arch/arm64/configs/RM6785_defconfig
@@ -4375,7 +4375,7 @@ CONFIG_EXTCON=y
 # CONFIG_EXTCON_USB_CHG is not set
 # CONFIG_EXTCON_USB_GPIO is not set
 CONFIG_EXTCON_MTK_USB=y
-# CONFIG_MTK_USB_IDDIG is not set
+CONFIG_MTK_USB_IDDIG=y
 CONFIG_MEMORY=y
 # CONFIG_ARM_PL172_MPMC is not set
 CONFIG_MTK_SMI=y
