RM6785: Regenerate defconfig
Signed-off-by: officialputuid <officialputuid@hack.id>

--- a/arch/arm64/configs/RM6785_defconfig
+++ b/arch/arm64/configs/RM6785_defconfig
@@ -1787,6 +1787,8 @@ CONFIG_MTK_GIC_V3_EXT=y
 CONFIG_MTK_SYS_CIRQ=y
 CONFIG_FAST_CIRQ_CLONE_FLUSH=y
 CONFIG_MTK_AUXADC=y
+# CONFIG_AUXADC_NEED_POWER_ON is not set
+# CONFIG_AUXADC_NOT_CONTROL_APMIXED_BASE is not set
 CONFIG_MTK_M4U=y
 # CONFIG_MTK_ICE_DEBUG is not set
 CONFIG_MTK_ATF_LOGGER=y
@@ -1874,6 +1876,7 @@ CONFIG_MTK_SCHED_INTEROP=y
 # MTK Energy Aware Scheduler Plus
 #
 CONFIG_MTK_SCHED_EAS_POWER_SUPPORT=y
+# CONFIG_MTK_SCHED_MULTI_GEARS is not set
 
 #
 # MTK Heterogenous MultiProcessor Scheduler
@@ -1972,6 +1975,9 @@ CONFIG_MTK_AMMS=y
 CONFIG_MTPROF=y
 CONFIG_MTK_SCHED_MONITOR=y
 # CONFIG_MTK_WQ_DEBUG is not set
+# CONFIG_MTK_IRQ_COUNT_TRACER is not set
+# CONFIG_MTK_IRQ_OFF_TRACER is not set
+# CONFIG_MTK_PREEMPT_TRACER is not set
 CONFIG_ANDROID_DEFAULT_SETTING=y
 CONFIG_MTK_ANDROID_DEFAULT_SETTING=y
 # CONFIG_MTK_TIMER_ACCURACY_TEST is not set
