--- a/.github/workflows/ksu-oc.yml
+++ b/.github/workflows/ksu-oc.yml
@@ -1,5 +1,4 @@
-# This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
+# Copyright (C) 2023 psionicprjkt
 
 name: build-ksu-oc
 
@@ -7,7 +6,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  cron:
+  build:
     runs-on: ubuntu-latest
     defaults:
       run:
@@ -15,36 +14,47 @@ jobs:
         working-directory: ./
 
     steps:
-    - uses: actions/checkout@v2
-    - run: |
+      - name: Checkout Repository
+        uses: actions/checkout@v2
+
+      - name: Set Git Config
+        run: |
           git config --global user.name "officialputuid"
           git config --global user.email officialputuid@hack.id
 
-    - name: Clone sources
-      run: |
+      - name: Clone Clang & Kernel Sources
+        run: |
           git clone --depth=1 https://github.com/psionicprjkt/android_kernel_realme_mt6785 -b R-based-overclock mt6785
-          git clone --depth=1 https://gitlab.com/LeCmnGend/proton-clang -b clang-16 mt6785/clang
+          cd mt6785
+          wget https://android.googlesource.com/platform/prebuilts/clang/host/linux-x86/+archive/refs/heads/main/clang-r498229b.tar.gz -O "aosp-clang.tar.gz"
+          mkdir clang && tar -xf aosp-clang.tar.gz -C clang && rm -f aosp-clang.tar.gz
 
-    - name: Latest KernelSU
-      run: |
+      - name: Update Latest KernelSU
+        run: |
           cd mt6785
           rm -rf KernelSU && curl -LSs "https://raw.githubusercontent.com/tiann/KernelSU/main/kernel/setup.sh" | bash -
 
-    - name: Build Kernel
-      run: |
+      - name: Trigger KSU+OC Workflow
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: gh workflow run ksu-oc.yml --ref R-based
+
+      - name: Build Kernel
+        run: |
           cd mt6785
           . build-ksu-oc.sh
 
-    - name: Set Date
-      run: |
+      - name: Set Release Date
+        run: |
           echo "RELEASE_DATE=$(date +"%d%m%Y")" >> "$GITHUB_ENV"
 
-    - name: Release Kernel
-      uses: marvinpinto/action-automatic-releases@latest
-      with:
-        repo_token: ${{ secrets.GITHUB_TOKEN }}
-        automatic_release_tag: "KSU+OC"
-        prerelease: false
-        title: psionic-kernel-RM6785-${{ env.RELEASE_DATE }}-KSU+OC
-        files: |
-          mt6785/AnyKernel/psionic-kernel-RM6785*
+      - name: Release Kernel
+        uses: marvinpinto/action-automatic-releases@latest
+        with:
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          automatic_release_tag: "KSU+OC"
+          prerelease: false
+          title: psionic-kernel-RM6785-${{ env.RELEASE_DATE }}-KSU+OC
+          files: |
+            mt6785/AnyKernel/psionic-kernel-RM6785*
+
