defconfig: Enable CONFIG_MTK_SCHED_MULTI_GEARS
Signed-off-by: officialputuid <officialputuid@hack.id>

--- a/arch/arm64/configs/RM6785_defconfig
+++ b/arch/arm64/configs/RM6785_defconfig
@@ -1872,7 +1872,8 @@ CONFIG_MTK_SCHED_INTEROP=y
 # MTK Energy Aware Scheduler Plus
 #
 CONFIG_MTK_SCHED_EAS_POWER_SUPPORT=y
-# CONFIG_MTK_SCHED_MULTI_GEARS is not set
+CONFIG_MTK_SCHED_MULTI_GEARS=y
+# CONFIG_MTK_SCHED_BL_FIRST is not set
 
 #
 # MTK Heterogenous MultiProcessor Scheduler
