--- a/arch/arm64/configs/RM6785_defconfig
+++ b/arch/arm64/configs/RM6785_defconfig
@@ -1957,7 +1957,7 @@ CONFIG_MTK_EARA_THERMAL=y
 CONFIG_MTK_PERF_TRACKER=y
 CONFIG_MTK_LOWMEM_HINT=y
 # CONFIG_MTK_SKB_OWNER is not set
-# CONFIG_MTK_TASK_TURBO is not set
+CONFIG_MTK_TASK_TURBO=y
 
 #
 # Memory configs
