--- a/arch/arm64/configs/RM6785_defconfig
+++ b/arch/arm64/configs/RM6785_defconfig
@@ -1855,6 +1855,7 @@ CONFIG_LIGHTNESS_MAPPING_VALUE=255
 # CONFIG_CONTROL_BL_TEMPERATURE is not set
 # CONFIG_MTK_IRTX_PWM_SUPPORT is not set
 CONFIG_MTK_PWM=y
+CONFIG_MTK_SYSTRACKER_DISABLE=y
 CONFIG_MTK_SYSTRACKER_V2=y
 CONFIG_MTK_BOOT=y
 CONFIG_MTK_BOOT_REASON=y
