--- a/.github/workflows/normal.yml
+++ b/.github/workflows/normal.yml
@@ -23,7 +23,7 @@ jobs:
 
       - name: Download Resources
         run: |
-          git clone https://github.com/psionicprjkt/android_kernel_realme_mt6785 mt6785 && cd mt6785
+          git clone --recursive https://github.com/psionicprjkt/android_kernel_realme_mt6785 mt6785 && cd mt6785
           git clone --depth=1 https://github.com/psionicprjkt/aarch64-linux-android-4.9 arm64 && git clone --depth=1 https://github.com/psionicprjkt/arm-linux-androideabi-4.9 arm32
           wget --quiet https://android.googlesource.com/platform/prebuilts/clang/host/linux-x86/+archive/refs/heads/main/clang-r510928.tar.gz -O "aosp-clang.tar.gz"
           mkdir clang && tar -xf aosp-clang.tar.gz -C clang && rm -f aosp-clang.tar.gz
@@ -33,10 +33,10 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: gh workflow run ksu.yml --ref R-based
 
-      - name: Revert KernelSU Changes
+      - name: Disable KernelSU Hooks
         run: |
-          cd mt6785 && git fetch https://github.com/psionicprjkt/android_kernel_realme_mt6785 R-based-nonksu
-          git cherry-pick be5dc6ed6e3c1f188271ef7cd17bd86b089df891
+          cd mt6785
+          sed -i 's/CONFIG_KSU=y/CONFIG_KSU=n/' arch/arm64/configs/RM6785_defconfig
 
       - name: Build Kernel
         run: |
