--- a/.github/workflows/private-default.yml
+++ b/.github/workflows/private-default.yml
@@ -27,8 +27,8 @@ jobs:
           git config --global user.name "officialputuid" && git config --global user.email officialputuid@hack.id
           git clone --recursive --depth=1 https://officialputuid:${{ secrets.GH_TOKEN }}@github.com/${{ secrets.GH_REPO_PRIVATE }} -b ${{ secrets.GH_BRANCH_PRIVATE }} mt6785 && cd mt6785
           git clone --depth=1 https://github.com/psionicprjkt/aarch64-linux-android-4.9 arm64 && git clone --depth=1 https://github.com/psionicprjkt/arm-linux-androideabi-4.9 arm32
-          wget --quiet https://android.googlesource.com/platform/prebuilts/clang/host/linux-x86/+archive/refs/heads/main/clang-r510928.tar.gz -O "aosp-clang.tar.gz"
-          mkdir clang && tar -xf aosp-clang.tar.gz -C clang && rm -f aosp-clang.tar.gz
+          wget --quiet https://github.com/XSans0/WeebX-Clang/releases/download/WeebX-Clang-19.0.0git-release/WeebX-Clang-19.0.0git.tar.gz -O "clang.tar.gz"
+          mkdir clang && tar -xf clang.tar.gz -C clang && rm -f clang.tar.gz
 
       - name: Setup Version
         run: |
